--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.1.2",
     "@react-navigation/native": "^5.9.3",
     "react": "17.0.1",
     "react-native": "0.64.0",
