--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
+    "react-native-responsive-linechart": "^5.7.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
