Mocked native modules in React Navigation & React Native Firebase. Added `transformIgnorePatterns` in jest config.

--- a/package.json
+++ b/package.json
@@ -56,6 +56,12 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|@react-native|react-(native|universal|navigation)-(.*)|@react-native-community/(.*)|@react-navigation/(.*)|bs-platform|(@[a-zA-Z]+/)?(bs|reason|rescript)-(.*)+)"
     ]
   }
 }
