Known issue: avoid replacing the global Promise object with PromiseJs (https://github.com/callstack/react-native-testing-library/issues/379#issuecomment-714341282)

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/react": "^17"
   },
   "jest": {
-    "preset": "react-native",
+    "preset": "./jest-preset.js",
     "moduleFileExtensions": [
       "ts",
       "tsx",
