--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 # Copy to a file called `.env` in project root directory, and fill up with your own values
 
 ALPHA_VANTAGE_API_KEY=<your_API_key_here>
+FIREBASE_REALTIME_DATABASE_URL=https://path-to-database.firebaseio.com
